# freertos

./: CMakeLists.txt
amazon-freertos-configs/: aws_clientcredential.h  aws_clientcredential_keys.h  aws_dev_mode_key_provisioning.h  aws_iot_metrics.h  iot_logging.h  iot_network_manager_private.h  mqtt_mutual_auth.h
src/: aws_dev_mode_key_provisioning.c  aws_iot_network_manager.c  main.c
